--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,7 @@ body {
 
 #chat-answers {
   overflow-y: auto;
+  max-height: 50vh;
 }
 
 #chat-question-input {
@@ -94,7 +95,7 @@ body {
 
 .loading .loading__dot:nth-child(2) {
   animation-delay: 0.1s;
-  background-color: rgb(100, 100, 230);
+  background-color: blueviolet;
 }
 
 .loading .loading__dot:nth-child(3) {
@@ -110,6 +111,7 @@ body {
     transform: scale(6);
   }
   100% {
+    background-color: cyan;
     transform: scale(1);
   }
 }
@@ -121,4 +123,13 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+textarea:focus {
+  outline: none;
 }
