--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,28 +23,7 @@ body {
 }
 
 #chat-answers {
-  overflow-y: auto;
-  max-height: 50vh;
-}
-
-#chat-question-input {
-  position: relative;
-}
-
-#chat-question-input::before {
-  content: '';
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 100%;
-  height: 150%;
-  background: linear-gradient(to bottom, transparent, #0e0d0d);
-  z-index: 1;
-  pointer-events: none;
-}
-
-#chats p:last-child {
-  margin-bottom: 50px !important;
+  flex: 1;
 }
 
 @media (max-width: 640px) {
@@ -54,7 +33,6 @@ body {
 
   #chat-answer {
     width: 90vw;
-    height: 60vh;
   }
 }
 
